--- a/src/pages/testing/defects/defect-details/defect-details.html
+++ b/src/pages/testing/defects/defect-details/defect-details.html
@@ -4,7 +4,7 @@
       Defect details
     </ion-title>
     <ion-buttons end>
-      <button ion-button block color="light" (click)="addDefect()">
+      <button ion-button block color="light" (click)="checkProhibitionStatus()">
         <span>Done</span>
       </button>
     </ion-buttons>
@@ -25,7 +25,8 @@
               <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
               <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
           </span>
-          <ion-badge class="margin-left-half" item-end text-uppercase [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
+          <ion-badge class="margin-left-half" item-end text-uppercase
+                     [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
             {{ defect.deficiencyCategory }}
           </ion-badge>
           <ion-badge class="badge__prs margin-left-half" item-end text-uppercase color="tertiary" *ngIf="defect.prs">
@@ -40,80 +41,109 @@
         </ion-row>
       </ion-grid>
     </ion-item-group>
-<div *ngIf="defectMetadata">
+    <div *ngIf="defectMetadata">
 
-    <ion-item-group *ngIf="isLocation">
-      <ion-item-divider text-uppercase>
-        <span padding-left>LOCATION</span>
-      </ion-item-divider>
+      <ion-item-group *ngIf="isLocation">
+        <ion-item-divider text-uppercase>
+          <span padding-left>LOCATION</span>
+        </ion-item-divider>
 
-      <ion-item *ngIf="defectMetadata.location.vertical" padding-left>
-        <ion-label>Vertical</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.vertical" placeholder="Select">
-          <ion-option *ngFor="let position of defectMetadata.location.vertical" [value]="position">{{position}}</ion-option>
-        </ion-select>
-        <ion-icon *ngIf="!defect.additionalInformation.location.vertical" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.additionalInformation.location.vertical" item-end name='checkmark' color="primary"></ion-icon>
-      </ion-item>
-      <ion-item *ngIf="defectMetadata.location.horizontal" padding-left>
-        <ion-label>Horizontal</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.horizontal" placeholder="Select">
-          <ion-option *ngFor="let position of defectMetadata.location.horizontal" [value]="position">{{position}}</ion-option>
-        </ion-select>
-        <ion-icon *ngIf="!defect.additionalInformation.location.horizontal" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.additionalInformation.location.horizontal" item-end name='checkmark' color="primary"></ion-icon>
-      </ion-item>
-      <ion-item *ngIf="defectMetadata.location.lateral" padding-left>
-        <ion-label>Lateral</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.lateral" placeholder="Select">
-          <ion-option *ngFor="let position of defectMetadata.location.lateral" [value]="position">{{position}}</ion-option>
-        </ion-select>
-        <ion-icon *ngIf="!defect.additionalInformation.location.lateral" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.additionalInformation.location.lateral" item-end name='checkmark' color="primary"></ion-icon>
-      </ion-item>
-      <ion-item *ngIf="defectMetadata.location.longitudinal" padding-left>
-        <ion-label>Longitudinal</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.longitudinal" placeholder="Select">
-          <ion-option *ngFor="let position of defectMetadata.location.longitudinal" [value]="position">{{position}}</ion-option>
-        </ion-select>
-        <ion-icon *ngIf="!defect.additionalInformation.location.longitudinal" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.additionalInformation.location.longitudinal" item-end name='checkmark' color="primary"></ion-icon>
-      </ion-item>
-      <ion-item *ngIf="defectMetadata.location.rowNumber" padding-left>
-        <ion-label>Row Number</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.rowNumber" placeholder="Select">
-          <ion-option *ngFor="let position of defectMetadata.location.rowNumber" [value]="position">{{position}}</ion-option>
-        </ion-select>
-        <ion-icon *ngIf="!defect.additionalInformation.location.rowNumber" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.additionalInformation.location.rowNumber" item-end name='checkmark' color="primary"></ion-icon>
-      </ion-item>
-      <ion-item *ngIf="defectMetadata.location.seatNumber" padding-left>
-        <ion-label>Seat Number</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.seatNumber" placeholder="Select">
-          <ion-option *ngFor="let position of defectMetadata.location.seatNumber" [value]="position">{{position}}</ion-option>
-        </ion-select>
-        <ion-icon *ngIf="!defect.additionalInformation.location.seatNumber" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.additionalInformation.location.seatNumber" item-end name='checkmark' color="primary"></ion-icon>
-      </ion-item>
-      <ion-item *ngIf="defectMetadata.location.axleNumber" padding-left>
-        <ion-label>Axle Number</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.axleNumber" placeholder="Select">
-          <ion-option *ngFor="let position of defectMetadata.location.axleNumber" [value]="position">{{position}}</ion-option>
-        </ion-select>
-        <ion-icon *ngIf="!defect.additionalInformation.location.axleNumber" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.additionalInformation.location.axleNumber" item-end name='checkmark' color="primary"></ion-icon>
-      </ion-item>
-    </ion-item-group>
+        <ion-item *ngIf="defectMetadata.location.vertical" padding-left>
+          <ion-label>Vertical</ion-label>
+          <ion-select text-capitalize item-end interface="action-sheet"
+                      [(ngModel)]="defect.additionalInformation.location.vertical" placeholder="Select">
+            <ion-option *ngFor="let position of defectMetadata.location.vertical"
+                        [value]="position">{{position}}</ion-option>
+          </ion-select>
+          <ion-icon *ngIf="!defect.additionalInformation.location.vertical" item-end name='arrow-forward'
+                    class="color-grey-2"></ion-icon>
+          <ion-icon *ngIf="defect.additionalInformation.location.vertical" item-end name='checkmark'
+                    color="primary"></ion-icon>
+        </ion-item>
+        <ion-item *ngIf="defectMetadata.location.horizontal" padding-left>
+          <ion-label>Horizontal</ion-label>
+          <ion-select text-capitalize item-end interface="action-sheet"
+                      [(ngModel)]="defect.additionalInformation.location.horizontal" placeholder="Select">
+            <ion-option *ngFor="let position of defectMetadata.location.horizontal"
+                        [value]="position">{{position}}</ion-option>
+          </ion-select>
+          <ion-icon *ngIf="!defect.additionalInformation.location.horizontal" item-end name='arrow-forward'
+                    class="color-grey-2"></ion-icon>
+          <ion-icon *ngIf="defect.additionalInformation.location.horizontal" item-end name='checkmark'
+                    color="primary"></ion-icon>
+        </ion-item>
+        <ion-item *ngIf="defectMetadata.location.lateral" padding-left>
+          <ion-label>Lateral</ion-label>
+          <ion-select text-capitalize item-end interface="action-sheet"
+                      [(ngModel)]="defect.additionalInformation.location.lateral" placeholder="Select">
+            <ion-option *ngFor="let position of defectMetadata.location.lateral"
+                        [value]="position">{{position}}</ion-option>
+          </ion-select>
+          <ion-icon *ngIf="!defect.additionalInformation.location.lateral" item-end name='arrow-forward'
+                    class="color-grey-2"></ion-icon>
+          <ion-icon *ngIf="defect.additionalInformation.location.lateral" item-end name='checkmark'
+                    color="primary"></ion-icon>
+        </ion-item>
+        <ion-item *ngIf="defectMetadata.location.longitudinal" padding-left>
+          <ion-label>Longitudinal</ion-label>
+          <ion-select text-capitalize item-end interface="action-sheet"
+                      [(ngModel)]="defect.additionalInformation.location.longitudinal" placeholder="Select">
+            <ion-option *ngFor="let position of defectMetadata.location.longitudinal"
+                        [value]="position">{{position}}</ion-option>
+          </ion-select>
+          <ion-icon *ngIf="!defect.additionalInformation.location.longitudinal" item-end name='arrow-forward'
+                    class="color-grey-2"></ion-icon>
+          <ion-icon *ngIf="defect.additionalInformation.location.longitudinal" item-end name='checkmark'
+                    color="primary"></ion-icon>
+        </ion-item>
+        <ion-item *ngIf="defectMetadata.location.rowNumber" padding-left>
+          <ion-label>Row Number</ion-label>
+          <ion-select text-capitalize item-end interface="action-sheet"
+                      [(ngModel)]="defect.additionalInformation.location.rowNumber" placeholder="Select">
+            <ion-option *ngFor="let position of defectMetadata.location.rowNumber"
+                        [value]="position">{{position}}</ion-option>
+          </ion-select>
+          <ion-icon *ngIf="!defect.additionalInformation.location.rowNumber" item-end name='arrow-forward'
+                    class="color-grey-2"></ion-icon>
+          <ion-icon *ngIf="defect.additionalInformation.location.rowNumber" item-end name='checkmark'
+                    color="primary"></ion-icon>
+        </ion-item>
+        <ion-item *ngIf="defectMetadata.location.seatNumber" padding-left>
+          <ion-label>Seat Number</ion-label>
+          <ion-select text-capitalize item-end interface="action-sheet"
+                      [(ngModel)]="defect.additionalInformation.location.seatNumber" placeholder="Select">
+            <ion-option *ngFor="let position of defectMetadata.location.seatNumber"
+                        [value]="position">{{position}}</ion-option>
+          </ion-select>
+          <ion-icon *ngIf="!defect.additionalInformation.location.seatNumber" item-end name='arrow-forward'
+                    class="color-grey-2"></ion-icon>
+          <ion-icon *ngIf="defect.additionalInformation.location.seatNumber" item-end name='checkmark'
+                    color="primary"></ion-icon>
+        </ion-item>
+        <ion-item *ngIf="defectMetadata.location.axleNumber" padding-left>
+          <ion-label>Axle Number</ion-label>
+          <ion-select text-capitalize item-end interface="action-sheet"
+                      [(ngModel)]="defect.additionalInformation.location.axleNumber" placeholder="Select">
+            <ion-option *ngFor="let position of defectMetadata.location.axleNumber"
+                        [value]="position">{{position}}</ion-option>
+          </ion-select>
+          <ion-icon *ngIf="!defect.additionalInformation.location.axleNumber" item-end name='arrow-forward'
+                    class="color-grey-2"></ion-icon>
+          <ion-icon *ngIf="defect.additionalInformation.location.axleNumber" item-end name='checkmark'
+                    color="primary"></ion-icon>
+        </ion-item>
+      </ion-item-group>
 
-    <ion-item-group *ngIf="defectMetadata.notes">
-      <ion-item-divider text-uppercase>
-        <span padding-left>NOTES</span>
-      </ion-item-divider>
-      <ion-item padding-left>
-        <ion-textarea placeholder="Add notes" [(ngModel)]="defect.additionalInformation.notes" maxlength="200" class="textarea-height"></ion-textarea>
-      </ion-item>
-    </ion-item-group>
-</div>
+      <ion-item-group *ngIf="defectMetadata.notes">
+        <ion-item-divider text-uppercase>
+          <span padding-left>NOTES</span>
+        </ion-item-divider>
+        <ion-item padding-left>
+          <ion-textarea placeholder="Add notes" [(ngModel)]="defect.additionalInformation.notes" maxlength="200"
+                        class="textarea-height"></ion-textarea>
+        </ion-item>
+      </ion-item-group>
+    </div>
 
     <ion-item-group *ngIf="showPrs">
       <ion-item-divider text-uppercase>
@@ -124,9 +154,20 @@
         <ion-toggle color="secondary" checked="false" [(ngModel)]="defect.prs"></ion-toggle>
       </ion-item>
     </ion-item-group>
+    <ion-item-group *ngIf="showProhibition">
+      <ion-item-divider text-uppercase>
+        <span padding-left>PROHIBITION</span>
+      </ion-item-divider>
+      <ion-item no-lines padding-left>
+        <ion-label>Issued in Mobile Compliance</ion-label>
+        <ion-toggle color="secondary" checked="false" [(ngModel)]="defect.prohibitionIssued"></ion-toggle>
+      </ion-item>
+    </ion-item-group>
     <ion-item-group *ngIf="isEdit">
       <ion-item-divider text-uppercase></ion-item-divider>
-      <button ion-item detail-none  padding-left class="btn-remove-defect" (click)="removeDefectConfirm(defect)">Remove defect</button>
+      <button ion-item detail-none padding-left class="btn-remove-defect" (click)="removeDefectConfirm(defect)">Remove
+        defect
+      </button>
     </ion-item-group>
   </ion-list>
 
