--- a/src/pages/testing/defects/defect-details/defect-details.html
+++ b/src/pages/testing/defects/defect-details/defect-details.html
@@ -154,7 +154,7 @@
         <ion-toggle color="secondary" checked="false" [(ngModel)]="defect.prs"></ion-toggle>
       </ion-item>
     </ion-item-group>
-    <ion-item-group *ngIf="showProhibition">
+    <ion-item-group *ngIf="showProhibition && !isProhibitionClearance">
       <ion-item-divider text-uppercase>
         <span padding-left>PROHIBITION</span>
       </ion-item-divider>
