--- a/src/pages/testing/vehicle/add-preparer/add-preparer.html
+++ b/src/pages/testing/vehicle/add-preparer/add-preparer.html
@@ -22,8 +22,8 @@
       </ion-col>
     </ion-row>
     <ion-row no-border>
-      <ion-item padding-horizontal class="srch-preparer-input">
-        <ion-input placeholder="Enter preparer ID if known" [(ngModel)]="searchValue" (ngModelChange)="valueInputChange($event)"></ion-input>
+      <ion-item padding-left class="srch-preparer-input">
+        <ion-input placeholder="Enter preparer ID if known" [(ngModel)]="searchValue" (ngModelChange)="valueInputChange($event)" clearInput="true"></ion-input>
       </ion-item>
     </ion-row>
     <ion-row padding-horizontal class="info-text">
