--- a/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.html
+++ b/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.html
@@ -162,8 +162,8 @@
                 <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
                 <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
               </span>
-              <ion-badge *ngIf="defect.deficiencyCategory" 
-                         text-uppercase 
+              <ion-badge *ngIf="defect.deficiencyCategory"
+                         text-uppercase
                          [color]="getDeficiencyColor(defect.deficiencyCategory)">
                 {{ defect.deficiencyCategory }}
               </ion-badge>
@@ -191,11 +191,11 @@
             <ion-col col-12 text-start text-wrap class="additional-info">
               <span *ngIf="defect.additionalInformation.location.vertical" text-capitalize>
                 <span class="forward-slash">/</span>
-                  {{ defect.additionalInformation.location.vertical }}
+                {{ defect.additionalInformation.location.vertical }}
               </span>
               <span *ngIf="defect.additionalInformation.location.horizontal" text-capitalize>
                 <span class="forward-slash">/</span>
-                  {{ defect.additionalInformation.location.horizontal }}
+                {{ defect.additionalInformation.location.horizontal }}
               </span>
               <span *ngIf="defect.additionalInformation.location.lateral" text-capitalize>
                 <span class="forward-slash">/</span>
@@ -242,7 +242,7 @@
     </ng-template>
   </ion-list>
 
-  <ion-list class="list-margin">
+  <ion-list class="list-margin" *ngIf="vehicleType !== 'trl'">
     <ion-list-header text-uppercase padding-left>ODOMETER READING</ion-list-header>
     <ion-item ion-item detail-none padding-left>
       <ion-grid no-padding>
@@ -262,7 +262,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-list class="list-margin" *ngIf="!doesNotHaveBelts">
+  <ion-list class="list-margin" *ngIf="!doesNotHaveBelts && vehicleType === 'psv'">
     <ion-list-header text-uppercase padding-left>SEATBELT INSTALLATION CHECK</ion-list-header>
     <ion-item ion-item detail-none padding-left>
       <ion-grid no-padding>
